# zenodo-maint

./: .gitignore  CLAUDE.md  README.md  monitored.json  pyproject.toml
.github/workflows/: archive.reusable.yml  ci.yml  drift.reusable.yml  monitor.yml  move-major-tag.yml  smoke.yml
examples/: authors.json  zenodo-curated.json  zenodo.json  zenodo.toml
scripts/: sandbox_smoke.py
skill/: SKILL.md
tests/: test_audit_refs.py  test_concept_versions.py  test_hits_total.py  test_metadata_overrides.py  test_repo_from_related.py
zenodo_maint/: __init__.py  api.py  cli.py  config.py  sources.py
